Fix dark mode background color for Header Tint theme

--- a/ModernTintedHeader.nnwtheme/stylesheet.css
+++ b/ModernTintedHeader.nnwtheme/stylesheet.css
@@ -7,8 +7,8 @@ body {
 }
 
 .feedHeaderContainer {
-	background-color: f6f6f6;
-	border-bottom: 1px solid #e0e0e0;
+	background-color: var(--article-header-background-color);
+	border-bottom: 1px solid var(--article-header-border-color);
 }
 
 .feedHeaderDate {
@@ -74,6 +74,8 @@ pre {
 	--body-code-color: #666;
 	--system-message-color: #cbcbcb;
 	--feedlink-color: rgba(255, 0, 0, 0.6);
+	--article-header-background-color: #f6f6f6;
+	--article-header-border-color: #e0e0e0;
 	--article-title-color: #333;
 	--article-title-secondary-color: #8c9194;
 	--article-date-color: rgba(0, 0, 0, 0.3);
@@ -86,6 +88,8 @@ pre {
 		--body-code-color: #b2b2b2;
 		--system-message-color: #5f5f5f;
 		--feedlink-color: rgba(94, 158, 244, 1);
+		--article-header-background-color: #353535;
+		--article-header-border-color: #000000;
 		--article-title-color: #e0e0e0;
 		--article-date-color: rgba(255, 255, 255, 0.5);
 		--table-cell-border-color: dimgray;
